# algorand-royalty-enforcer

./: .gitignore  README.md  build.sh  pyproject.toml
.github/workflows/: release.yaml
assets/: enforcer_abi.json  enforcer_approval.teal  marketplace_abi.json
royalty_arc18/contracts/: enforcer.py  enforcer_placeholder.py  marketplace.py
royalty_arc18/utils/: abi.py  accounts.py  apps.py  assets.py  transactions.py
royalty_enforcer/contracts/: enforcer.py  enforcer_placeholder.py
royalty_enforcer/utils/: accounts.py  apps.py  assets.py  clients.py  print_signatures.py
tests/: test_royalty_arc18.py  test_utils.py
tests/contracts/: test_enforcer.py  test_marketplace.py
