[tool.poetry]
name = "royalty-arc18"
version = "0.1.0"
description = ""
authors = ["DEPT <opensource@deptagency.com>"]

[tool.poetry.dependencies]
python = "^3.10"
py-algorand-sdk = "^1.12.0"
pyteal = { git = "https://github.com/algorand/pyteal.git", branch = "feature/abi" }
pytest-xdist = "^2.5.0"

[tool.poetry.dev-dependencies]
pytest = "^7.1.1"
black = "^22.3.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
