[tool.poetry]
name = "royalty_enforcer"
version = "v0.1.5"
description = ""
authors = ["DEPT <opensource@deptagency.com>"]

[tool.poetry.dependencies]
python = "^3.10"
py-algorand-sdk = "^1.16.1"
pyteal = "^0.17.0"
pytest-xdist = "^2.5.0"

[tool.poetry.dev-dependencies]
pytest = "^7.1.1"
black = "^22.3.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
